whitespace style; don't think button padding should use a variable; corrected legacy smaller class again

--- a/_lib/solid-utilities/_buttons.scss
+++ b/_lib/solid-utilities/_buttons.scss
@@ -39,7 +39,7 @@
 .button--small {
   @include button-reset;
   font-family: inherit          !important;
-  padding: $space-1 .875rem     !important;
+  padding: .5rem .875rem        !important;
   font-size: $text-4            !important;
   line-height: $line-height-4   !important;
   border-radius: $border-radius !important;
