--- a/_lib/solid-utilities/_forms.scss
+++ b/_lib/solid-utilities/_forms.scss
@@ -30,7 +30,7 @@
   background: $fill-white     !important;
   font-size: $text-4          !important;
   line-height: $line-height-4 !important;
-  padding: $space-1 .75rem     !important;
+  padding: .5rem .75rem       !important;
   border: $border             !important;
 }
 
@@ -61,9 +61,9 @@ select::-ms-expand,
 
 
 .select--small {
-  padding-right: $space-4 !important;
+  padding-right: 2rem                               !important;
   background-position: calc(100% - 0.875rem) center !important;
-  background-size: .5rem  !important;
+  background-size: .5rem                            !important;
 }
 
 .textarea {
@@ -72,7 +72,7 @@ select::-ms-expand,
 }
 
 .textarea--small {
-  min-height: $space-4 * 2.5  !important;
+  min-height: 2rem * 2.5      !important;
   padding: .375rem .625rem    !important;
   font-size: $text-5          !important;
   line-height: $line-height-5 !important;
